# mashmaestro

./: .coveragerc  .flake8  .gitignore  .isort.cfg  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  tox.ini
src/mashmaestro/: bot.py  language.py  logger.py  paths.py  runner.py
src/mashmaestro/oto/: beer_xml.py  data.py  paths.py
tests/: test_package.py
